--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
   },
   "author": "Moshkin Svyatoslav",
   "license": "ISC",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ]
+  },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
